--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@preact/preset-vite": "^2.1.5",
+    "@vanilla-extract/css": "^1.6.8",
+    "@vanilla-extract/vite-plugin": "^3.1.2",
     "typescript": "^4.4.4",
     "vite": "^2.7.2"
   }
