--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@vanilla-extract/vite-plugin": "^3.1.2",
     "preact-render-to-string": "^5.1.19",
     "typescript": "^4.4.4",
-    "vite": "^2.7.2"
+    "vite": "^2.7.2",
+    "vite-plugin-svgr": "^1.0.1"
   }
 }
