--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "wordle",
+  "name": "wortle",
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
@@ -21,6 +21,7 @@
     "preact-render-to-string": "^5.1.19",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
+    "vite-plugin-pwa": "^0.11.13",
     "vite-plugin-svgr": "^1.0.1"
   }
 }
