--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react": "^17.0.38",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/vite-plugin": "^3.1.2",
+    "netlify-purge-cloudflare-on-deploy": "^1.2.0",
     "preact-render-to-string": "^5.1.19",
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
