--- a/netlify.toml
+++ b/netlify.toml
@@ -8,5 +8,5 @@
   [headers.values]
      Cache-Control = 'max-age=31536000,immutable'
 
-[[plugins]]
+[[context.production.plugins]]
 package = "netlify-purge-cloudflare-on-deploy"
