set up cloudflare workers

--- a/package.json
+++ b/package.json
@@ -3,19 +3,22 @@
   "version": "0.0.0",
   "scripts": {
     "dev": "vite",
+    "dev:api": "wrangler dev workers/index.ts",
     "build": "VITE_APP_ID=\"`date +%Y%m%d_%H%M%S`-$BUILD_ID\" vite build && VITE_SSR=true vite build --ssr src/prerender.tsx --outDir dist/server && NODE_ENV=production node dist/server/prerender.js && rm -rf dist/server",
     "preview": "vite preview",
     "postinstall": "node scripts/extract-words.mjs ./data/german-pruned.txt > src/word-lists/valid_words_de.json"
   },
   "dependencies": {
+    "itty-router": "^2.4.10",
     "preact": "^10.5.15",
     "preact-compat": "^3.19.0",
     "react-spring": "^9.4.2",
     "zustand": "^3.6.9"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^3.3.1",
     "@preact/preset-vite": "^2.1.5",
-    "@types/node": "^17.0.10",
+    "@types/node": "^17.0.15",
     "@types/react": "^17.0.38",
     "@vanilla-extract/css": "^1.6.8",
     "@vanilla-extract/vite-plugin": "^3.1.2",
@@ -24,6 +27,7 @@
     "typescript": "^4.4.4",
     "vite": "^2.7.2",
     "vite-plugin-pwa": "^0.11.13",
-    "vite-plugin-svgr": "^1.0.1"
+    "vite-plugin-svgr": "^1.0.1",
+    "wrangler": "^0.0.15"
   }
 }
